fixed tests in JavaFile2JavaUrl